ChangeLog for herdstat

2005-08-10 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Forgot to remove glibmm/libxml++ stuff.  Do 1.1.1_p5.

	* configure.ac: Update version (1.1.1_p4).

2005-08-09 Aaron Walker <ka0ttic@gentoo.org>

	* src/herds_xml_handler.cc: Append to developer name instead of
	overwriting it as the SAX2 implementation does not guarantee that the
	characters callback will be invoked only once.  This fixes the
	long-time herdstat bug that caused developer names with non-ASCII
	characters to be truncated (since the second invocation of the
	callback would overwrite what was stored on the first invocation).

2005-07-19 Aaron Walker <ka0ttic@gentoo.org>

	* lib/string.hh: Add cstdarg include (failure on uclibc).  Thanks to
	SpanKY for pointing it out.

2005-07-16 Aaron Walker <ka0ttic@gentoo.org>

	* lib/string.cc, lib/string.hh: Define stringify<> inline instead of
	in the source file, otherwise we get an undefined reference if we try
	calling it.

2005-07-13 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.1_p3 release).
	* lib/Makefile.am, src/Makefile.am, tests/src/Makefile.am: Added
	-Werror to AM_CXXFLAGS.
	* src/pkgcache.cc, src/pkgcache.hh, src/querycache.cc,
	src/querycache.hh, src/pkgquery.cc, src/pkgquery.hh,
	src/querycache_xml_handler.cc, src/querycache_xml_handler.hh,
	src/metacache.cc, src/metacache.hh: Cache PORTDIR_OVERLAY in addition
	to PORTDIR, so that the caches will be regenerated if a different
	PORTDIR_OVERLAY is specified.

2005-07-08 Aaron Walker <ka0ttic@gentoo.org>

	* lib/util_exceptions.hh: Use new[]/delete[] instead of malloc/free.

2005-07-03 Aaron Walker <ka0ttic@gentoo.org>

	* src/herds_xml_handler.cc: missed a LOCALSTATEDIR usage.
	* tests/common.sh, tests/away-test.sh, tests/dev-test.sh,
	tests/herd-test.sh, tests/metadata-test.sh, tests/stats-test.sh,
	tests/versions-test.sh: Reworked tests.  Added a test PORTDIR.
	* tests/metadata-regex-test.sh, tests/find-test.sh,