@@ -1,6 +1,6 @@
 noinst_PROGRAMS = string-test
 string_test_SOURCES = string-test.cc
 string_test_LDADD = $(top_srcdir)/lib/libutil.la
-AM_CXXFLAGS = -pedantic -ansi -Wall
+AM_CXXFLAGS = -pedantic -ansi -Wall -Wold-style-cast
 INCLUDES = -I$(top_srcdir)/lib
 MAINTAINERCLEANFILES = Makefile.in *~
